fix(order-service): resolve UnknownHostException by using LoadBalanced RestClient.Builder
- Replaced manual RestClient.builder() with injected @LoadBalanced builder
- Enabled service discovery for PRODUCT-SERVICE via Eureka
- Fixed DNS resolution issue causing UnknownHostException